// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for ExecutionVerificationView unit tests Ensure correct tabs are rendered via queryParams 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="pipeline.verification.analysisTab.metrics"
          id="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
          role="tab"
          tabindex="0"
        >
          pipeline.verification.analysisTab.metrics
        </div>
        <div
          aria-controls="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.logs"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="pipeline.verification.analysisTab.logs"
          id="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.logs"
          role="tab"
          tabindex="0"
        >
          pipeline.verification.analysisTab.logs
        </div>
        <span
          style="flex-grow: 1;"
        />
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--withLeftIcon Button--variation Button--variation-link"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-black"
              data-icon="api-docs"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.5 3.415a.5.5 0 01.5-.5h11a.5.5 0 01.4.2l3 4a.5.5 0 01.1.3v14a.5.5 0 01-.5.5h-2.13a.5.5 0 010-1h1.63V7.58l-2.75-3.666H5.5v10.532a.5.5 0 01-1 0V3.415z"
                  fill="#fff"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.5 9.915a.5.5 0 01.5-.5h6a.5.5 0 010 1H9a.5.5 0 01-.5-.5zm0 3a.5.5 0 01.5-.5h6a.5.5 0 010 1H9a.5.5 0 01-.5-.5z"
                  fill="#fff"
                  fill-rule="evenodd"
                  opacity="0.5"
                />
                <path
                  d="M5.006 21.587h-1.15l1.493-4.424h1.423l1.493 4.424h-1.15l-1.038-3.31h-.035l-1.036 3.31zm-.154-1.741h2.402v.812H4.852v-.813zm4.218 1.741v-4.424h1.827c.331 0 .617.064.858.194.242.128.428.308.56.538.13.229.196.495.196.8 0 .305-.067.572-.201.8a1.347 1.347 0 01-.568.53 1.913 1.913 0 01-.877.188H9.737v-.843h.93a.87.87 0 00.403-.084.578.578 0 00.248-.235.728.728 0 00.085-.357.708.708 0 00-.085-.354.566.566 0 00-.248-.233.896.896 0 00-.404-.082h-.527v3.562h-1.07zm5.365-4.424v4.424h-1.069v-4.424h1.07z"
                  fill="#fff"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              cv.externalAPICalls
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--withLeftIcon Button--variation Button--variation-link"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="audit-trail"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 68 68"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.167 8.5h31.166l8.5 11.333V59.5H14.167v-51z"
                  stroke="#383946"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.833"
                />
                <g
                  opacity="0.3"
                >
                  <mask
                    fill="#fff"
                    id="audit-trail_svg__a"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M25.5 25.5a1.417 1.417 0 000 2.833h17a1.417 1.417 0 100-2.833h-17zm-1.417 9.917c0-.783.635-1.417 1.417-1.417h17a1.417 1.417 0 010 2.833h-17a1.417 1.417 0 01-1.417-1.416zm0 8.5c0-.783.635-1.417 1.417-1.417h17a1.417 1.417 0 010 2.833h-17a1.417 1.417 0 01-1.417-1.416z"
                      fill-rule="evenodd"
                    />
                  </mask>
                  <path
                    d="M26.917 26.917c0 .782-.635 1.416-1.417 1.416v-5.666a4.25 4.25 0 00-4.25 4.25h5.667zM25.5 25.5c.782 0 1.417.634 1.417 1.417H21.25a4.25 4.25 0 004.25 4.25V25.5zm17 0h-17v5.667h17V25.5zm-1.417 1.417c0-.783.635-1.417 1.417-1.417v5.667a4.25 4.25 0 004.25-4.25h-5.667zm1.417 1.416a1.417 1.417 0 01-1.417-1.416h5.667a4.25 4.25 0 00-4.25-4.25v5.666zm-17 0h17v-5.666h-17v5.666zm0 2.834a4.25 4.25 0 00-4.25 4.25h5.667c0 .782-.635 1.416-1.417 1.416v-5.666zm17 0h-17v5.666h17v-5.666zm4.25 4.25a4.25 4.25 0 00-4.25-4.25v5.666a1.417 1.417 0 01-1.417-1.416h5.667zm-4.25 4.25a4.25 4.25 0 004.25-4.25h-5.667c0-.783.635-1.417 1.417-1.417v5.667zm-17 0h17V34h-17v5.667zm-4.25-4.25a4.25 4.25 0 004.25 4.25V34c.782 0 1.417.634 1.417 1.417H21.25zm4.25 4.25a4.25 4.25 0 00-4.25 4.25h5.667c0 .782-.635 1.416-1.417 1.416v-5.666zm17 0h-17v5.666h17v-5.666zm4.25 4.25a4.25 4.25 0 00-4.25-4.25v5.666a1.417 1.417 0 01-1.417-1.416h5.667zm-4.25 4.25a4.25 4.25 0 004.25-4.25h-5.667c0-.783.635-1.417 1.417-1.417v5.667zm-17 0h17V42.5h-17v5.667zm-4.25-4.25a4.25 4.25 0 004.25 4.25V42.5c.782 0 1.417.634 1.417 1.417H21.25z"
                    fill="currentColor"
                    mask="url(#audit-trail_svg__a)"
                  />
                </g>
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              cv.executionLogs
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.logs"
        class="bp3-tab-panel mainTabPanelLogs"
        id="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.logs"
        role="tabpanel"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="height: 100%;"
        >
          <div
            class="summary"
          />
          <div
            class="LogAnalysisContainer"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ExecutionVerificationView unit tests Ensure correct tabs are rendered via queryParams 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="pipeline.verification.analysisTab.metrics"
          id="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
          role="tab"
          tabindex="0"
        >
          pipeline.verification.analysisTab.metrics
        </div>
        <div
          aria-controls="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.logs"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="pipeline.verification.analysisTab.logs"
          id="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.logs"
          role="tab"
          tabindex="0"
        >
          pipeline.verification.analysisTab.logs
        </div>
        <span
          style="flex-grow: 1;"
        />
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--withLeftIcon Button--variation Button--variation-link"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-black"
              data-icon="api-docs"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.5 3.415a.5.5 0 01.5-.5h11a.5.5 0 01.4.2l3 4a.5.5 0 01.1.3v14a.5.5 0 01-.5.5h-2.13a.5.5 0 010-1h1.63V7.58l-2.75-3.666H5.5v10.532a.5.5 0 01-1 0V3.415z"
                  fill="#fff"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.5 9.915a.5.5 0 01.5-.5h6a.5.5 0 010 1H9a.5.5 0 01-.5-.5zm0 3a.5.5 0 01.5-.5h6a.5.5 0 010 1H9a.5.5 0 01-.5-.5z"
                  fill="#fff"
                  fill-rule="evenodd"
                  opacity="0.5"
                />
                <path
                  d="M5.006 21.587h-1.15l1.493-4.424h1.423l1.493 4.424h-1.15l-1.038-3.31h-.035l-1.036 3.31zm-.154-1.741h2.402v.812H4.852v-.813zm4.218 1.741v-4.424h1.827c.331 0 .617.064.858.194.242.128.428.308.56.538.13.229.196.495.196.8 0 .305-.067.572-.201.8a1.347 1.347 0 01-.568.53 1.913 1.913 0 01-.877.188H9.737v-.843h.93a.87.87 0 00.403-.084.578.578 0 00.248-.235.728.728 0 00.085-.357.708.708 0 00-.085-.354.566.566 0 00-.248-.233.896.896 0 00-.404-.082h-.527v3.562h-1.07zm5.365-4.424v4.424h-1.069v-4.424h1.07z"
                  fill="#fff"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              cv.externalAPICalls
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--withLeftIcon Button--variation Button--variation-link"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="audit-trail"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 68 68"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.167 8.5h31.166l8.5 11.333V59.5H14.167v-51z"
                  stroke="#383946"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.833"
                />
                <g
                  opacity="0.3"
                >
                  <mask
                    fill="#fff"
                    id="audit-trail_svg__a"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M25.5 25.5a1.417 1.417 0 000 2.833h17a1.417 1.417 0 100-2.833h-17zm-1.417 9.917c0-.783.635-1.417 1.417-1.417h17a1.417 1.417 0 010 2.833h-17a1.417 1.417 0 01-1.417-1.416zm0 8.5c0-.783.635-1.417 1.417-1.417h17a1.417 1.417 0 010 2.833h-17a1.417 1.417 0 01-1.417-1.416z"
                      fill-rule="evenodd"
                    />
                  </mask>
                  <path
                    d="M26.917 26.917c0 .782-.635 1.416-1.417 1.416v-5.666a4.25 4.25 0 00-4.25 4.25h5.667zM25.5 25.5c.782 0 1.417.634 1.417 1.417H21.25a4.25 4.25 0 004.25 4.25V25.5zm17 0h-17v5.667h17V25.5zm-1.417 1.417c0-.783.635-1.417 1.417-1.417v5.667a4.25 4.25 0 004.25-4.25h-5.667zm1.417 1.416a1.417 1.417 0 01-1.417-1.416h5.667a4.25 4.25 0 00-4.25-4.25v5.666zm-17 0h17v-5.666h-17v5.666zm0 2.834a4.25 4.25 0 00-4.25 4.25h5.667c0 .782-.635 1.416-1.417 1.416v-5.666zm17 0h-17v5.666h17v-5.666zm4.25 4.25a4.25 4.25 0 00-4.25-4.25v5.666a1.417 1.417 0 01-1.417-1.416h5.667zm-4.25 4.25a4.25 4.25 0 004.25-4.25h-5.667c0-.783.635-1.417 1.417-1.417v5.667zm-17 0h17V34h-17v5.667zm-4.25-4.25a4.25 4.25 0 004.25 4.25V34c.782 0 1.417.634 1.417 1.417H21.25zm4.25 4.25a4.25 4.25 0 00-4.25 4.25h5.667c0 .782-.635 1.416-1.417 1.416v-5.666zm17 0h-17v5.666h17v-5.666zm4.25 4.25a4.25 4.25 0 00-4.25-4.25v5.666a1.417 1.417 0 01-1.417-1.416h5.667zm-4.25 4.25a4.25 4.25 0 004.25-4.25h-5.667c0-.783.635-1.417 1.417-1.417v5.667zm-17 0h17V42.5h-17v5.667zm-4.25-4.25a4.25 4.25 0 004.25 4.25V42.5c.782 0 1.417.634 1.417 1.417H21.25z"
                    fill="currentColor"
                    mask="url(#audit-trail_svg__a)"
                  />
                </g>
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              cv.executionLogs
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
        class="bp3-tab-panel mainTabPanel"
        id="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
        role="tabpanel"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="height: 100%;"
        >
          <div
            class="summary"
          />
          <div
            class="deploymentMetrics"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ExecutionVerificationView unit tests Ensure no analysis state is rendered when activity id does not exist 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main noAnalysis"
    >
      <div
        class="StyledProps--font StyledProps--main NoDataCard--noDataCard StyledProps--flex StyledProps--flex-align-center-center"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; margin-top: -48px; width: 470px;"
        >
          <span
            class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--color StyledProps--color-grey600"
            icon="warning-sign"
          >
            <svg
              data-icon="warning-sign"
              height="48"
              viewBox="0 0 20 20"
              width="48"
            >
              <desc>
                warning-sign
              </desc>
              <path
                d="M19.86 17.52l.01-.01-9-16-.01.01C10.69 1.21 10.37 1 10 1s-.69.21-.86.52l-.01-.01-9 16 .01.01c-.08.14-.14.3-.14.48 0 .55.45 1 1 1h18c.55 0 1-.45 1-1 0-.18-.06-.34-.14-.48zM11 17H9v-2h2v2zm0-3H9V6h2v8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
          >
            pipeline.verification.logs.noAnalysis
          </p>
          <div
            class="NoDataCard--buttonContainer"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ExecutionVerificationView unit tests Ensure tabs are rendered 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="pipeline.verification.analysisTab.metrics"
          id="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
          role="tab"
          tabindex="0"
        >
          pipeline.verification.analysisTab.metrics
        </div>
        <div
          aria-controls="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.logs"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="pipeline.verification.analysisTab.logs"
          id="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.logs"
          role="tab"
          tabindex="0"
        >
          pipeline.verification.analysisTab.logs
        </div>
        <span
          style="flex-grow: 1;"
        />
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--withLeftIcon Button--variation Button--variation-link"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-black"
              data-icon="api-docs"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.5 3.415a.5.5 0 01.5-.5h11a.5.5 0 01.4.2l3 4a.5.5 0 01.1.3v14a.5.5 0 01-.5.5h-2.13a.5.5 0 010-1h1.63V7.58l-2.75-3.666H5.5v10.532a.5.5 0 01-1 0V3.415z"
                  fill="#fff"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.5 9.915a.5.5 0 01.5-.5h6a.5.5 0 010 1H9a.5.5 0 01-.5-.5zm0 3a.5.5 0 01.5-.5h6a.5.5 0 010 1H9a.5.5 0 01-.5-.5z"
                  fill="#fff"
                  fill-rule="evenodd"
                  opacity="0.5"
                />
                <path
                  d="M5.006 21.587h-1.15l1.493-4.424h1.423l1.493 4.424h-1.15l-1.038-3.31h-.035l-1.036 3.31zm-.154-1.741h2.402v.812H4.852v-.813zm4.218 1.741v-4.424h1.827c.331 0 .617.064.858.194.242.128.428.308.56.538.13.229.196.495.196.8 0 .305-.067.572-.201.8a1.347 1.347 0 01-.568.53 1.913 1.913 0 01-.877.188H9.737v-.843h.93a.87.87 0 00.403-.084.578.578 0 00.248-.235.728.728 0 00.085-.357.708.708 0 00-.085-.354.566.566 0 00-.248-.233.896.896 0 00-.404-.082h-.527v3.562h-1.07zm5.365-4.424v4.424h-1.069v-4.424h1.07z"
                  fill="#fff"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              cv.externalAPICalls
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--withLeftIcon Button--variation Button--variation-link"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="audit-trail"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 68 68"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.167 8.5h31.166l8.5 11.333V59.5H14.167v-51z"
                  stroke="#383946"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.833"
                />
                <g
                  opacity="0.3"
                >
                  <mask
                    fill="#fff"
                    id="audit-trail_svg__a"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M25.5 25.5a1.417 1.417 0 000 2.833h17a1.417 1.417 0 100-2.833h-17zm-1.417 9.917c0-.783.635-1.417 1.417-1.417h17a1.417 1.417 0 010 2.833h-17a1.417 1.417 0 01-1.417-1.416zm0 8.5c0-.783.635-1.417 1.417-1.417h17a1.417 1.417 0 010 2.833h-17a1.417 1.417 0 01-1.417-1.416z"
                      fill-rule="evenodd"
                    />
                  </mask>
                  <path
                    d="M26.917 26.917c0 .782-.635 1.416-1.417 1.416v-5.666a4.25 4.25 0 00-4.25 4.25h5.667zM25.5 25.5c.782 0 1.417.634 1.417 1.417H21.25a4.25 4.25 0 004.25 4.25V25.5zm17 0h-17v5.667h17V25.5zm-1.417 1.417c0-.783.635-1.417 1.417-1.417v5.667a4.25 4.25 0 004.25-4.25h-5.667zm1.417 1.416a1.417 1.417 0 01-1.417-1.416h5.667a4.25 4.25 0 00-4.25-4.25v5.666zm-17 0h17v-5.666h-17v5.666zm0 2.834a4.25 4.25 0 00-4.25 4.25h5.667c0 .782-.635 1.416-1.417 1.416v-5.666zm17 0h-17v5.666h17v-5.666zm4.25 4.25a4.25 4.25 0 00-4.25-4.25v5.666a1.417 1.417 0 01-1.417-1.416h5.667zm-4.25 4.25a4.25 4.25 0 004.25-4.25h-5.667c0-.783.635-1.417 1.417-1.417v5.667zm-17 0h17V34h-17v5.667zm-4.25-4.25a4.25 4.25 0 004.25 4.25V34c.782 0 1.417.634 1.417 1.417H21.25zm4.25 4.25a4.25 4.25 0 00-4.25 4.25h5.667c0 .782-.635 1.416-1.417 1.416v-5.666zm17 0h-17v5.666h17v-5.666zm4.25 4.25a4.25 4.25 0 00-4.25-4.25v5.666a1.417 1.417 0 01-1.417-1.416h5.667zm-4.25 4.25a4.25 4.25 0 004.25-4.25h-5.667c0-.783.635-1.417 1.417-1.417v5.667zm-17 0h17V42.5h-17v5.667zm-4.25-4.25a4.25 4.25 0 004.25 4.25V42.5c.782 0 1.417.634 1.417 1.417H21.25z"
                    fill="currentColor"
                    mask="url(#audit-trail_svg__a)"
                  />
                </g>
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              cv.executionLogs
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
        class="bp3-tab-panel mainTabPanel"
        id="bp3-tab-panel_AnalysisTypeTabs_pipeline.verification.analysisTab.metrics"
        role="tabpanel"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="height: 100%;"
        >
          <div
            class="summary"
          />
          <div
            class="deploymentMetrics"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
